fix non visible paragraph in tinymce ##

--- a/gdwdoc/skin/skins/gdwdoc_skin_styles/gdwdoc.css
+++ b/gdwdoc/skin/skins/gdwdoc_skin_styles/gdwdoc.css
@@ -37,7 +37,7 @@ margin-bottom: 12px;
 }
 
 p{
-color: #FFFFFF;
+color: #000000;
 font-family: Tahoma, "Trebuchet MS", Arial, serif;
 font-size: 11px;
 margin-bottom: 9px;
